--- a/shop_bot_nginx.prod.conf
+++ b/shop_bot_nginx.prod.conf
@@ -1,5 +1,5 @@
 
-upstream django {
+upstream django_shop_bot {
     server 127.0.0.1:8002; # for a web port socket (we'll use this first)
 }
 
@@ -28,7 +28,7 @@ server {
 
     # Finally, send all non-media requests to the Django server.
     location / {
-        uwsgi_pass  django;
+        uwsgi_pass  django_shop_bot;
         include     /home/webrunner/telegram_shop_bot/src/telegram_shop_bot/uwsgi_params;
 
     }
