Настройка supervisor конфига

--- a/supervisor/shop_bot.supervisor.conf
+++ b/supervisor/shop_bot.supervisor.conf
@@ -1,6 +1,19 @@
-[program:nginx_script]
-command="/etc/init.d/nginx restart"
+[program:nginx]
+command=/usr/sbin/nginx
 autostart=true
 autorestart=true
 stderr_logfile=/var/log/supervisor.nginx.err.log
 stdout_logfile=/var/log/supervisor.nginx.out.log
+
+[program:uwsgi_shop_bot_web]
+command=/usr/local/bin/uwsgi --ini /home/webrunner/telegram_shop_bot/src/telegram_shop_bot/shop_bot.uwsgi.ini  --socket :8002
+autostart=true
+autorestart=true
+stderr_logfile=/var/log/supervisor.uwsgi_shop_bot.err.log
+stdout_logfile=/var/log/supervisor.uwsgi_shop_bot.out.log
+
+
+[program:shop_bot_long_polling]
+command=/home/webrunner/venvs/env_shop_bot/bin/python ./manage.py run_bot_long_polling
+directory=/home/webrunner/telegram_shop_bot/src/telegram_shop_bot/
+
