--- a/supervisor/shop_bot.supervisor.conf
+++ b/supervisor/shop_bot.supervisor.conf
@@ -16,4 +16,20 @@ stdout_logfile=/var/log/supervisor.uwsgi_shop_bot.out.log
 [program:shop_bot_long_polling]
 command=/home/webrunner/venvs/env_shop_bot/bin/python ./manage.py run_bot_long_polling
 directory=/home/webrunner/telegram_shop_bot/src/telegram_shop_bot/
+stderr_logfile=/var/log/supervisor.shop_bot_long_polling.err.log
+stdout_logfile=/var/log/supervisor.shop_bot_long_polling.out.log
 
+
+[program:shop_bot_celery_beat]
+command=/home/webrunner/venvs/env_shop_bot/bin/python manage.py celery -A telegram_shop_bot beat -l info -S djcelery.schedulers.DatabaseScheduler --settings=telegram_shop_bot.settings.prod
+user=webrunner
+directory=/home/webrunner/telegram_shop_bot/src/telegram_shop_bot/
+stderr_logfile=/var/log/supervisor.shop_bot_celery_beat.err.log
+stdout_logfile=/var/log/supervisor.shop_bot_celery_beat.out.log
+
+[program:shop_bot_celery_worker]
+command=/home/webrunner/venvs/env_shop_bot/bin/python manage.py celery -A telegram_shop_bot worker -l info --events -c 1 --settings=telegram_shop_bot.settings.prod
+user=webrunner
+directory=/home/webrunner/telegram_shop_bot/src/telegram_shop_bot/
+stderr_logfile=/var/log/supervisor.shop_bot_celery_worker.err.log
+stdout_logfile=/var/log/supervisor.shop_bot_celery_worker.out.log
