--- a/supervisor/shop_bot.supervisor.conf
+++ b/supervisor/shop_bot.supervisor.conf
@@ -9,8 +9,8 @@ stdout_logfile=/var/log/supervisor.nginx.out.log
 command=/usr/local/bin/uwsgi --ini /home/webrunner/telegram_shop_bot/src/telegram_shop_bot/shop_bot.uwsgi.ini  --socket :8002
 autostart=true
 autorestart=true
-stderr_logfile=/var/log/supervisor.uwsgi_shop_bot.err.log
-stdout_logfile=/var/log/supervisor.uwsgi_shop_bot.out.log
+stderr_logfile=/var/log/supervisor.uwsgi_shop_bot_web.err.log
+stdout_logfile=/var/log/supervisor.uwsgi_shop_bot_web.out.log
 
 [program:shop_bot_long_polling]
 command=/home/webrunner/venvs/env_shop_bot/bin/python ./manage.py run_bot_long_polling
