--- a/shop_bot_nginx.prod.conf
+++ b/shop_bot_nginx.prod.conf
@@ -6,7 +6,15 @@ upstream django_shop_bot {
 # configuration of the server
 server {
     # the port your site will be served on
-    listen      82 default_server;
+    # listen      82 default_server;
+    listen 443 ssl;
+    server_name bots.artbelka.miramik.ru
+    #server_name bots.artbelka.by
+
+    ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
+    ssl_certificate /etc/letsencrypt/live/bots.artbelka.miramik.ru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/bots.artbelka.miramik.ru/privkey.pem;
+
     # the domain name it will serve for
     # server_name *; # substitute your machine's IP address or FQDN
     charset     utf-8;
