--- a/supervisor/shop_bot.supervisor.conf
+++ b/supervisor/shop_bot.supervisor.conf
@@ -1,9 +1,9 @@
-[program:nginx]
-command=/usr/sbin/nginx
-autostart=true
-autorestart=true
-stderr_logfile=/var/log/supervisor.nginx.err.log
-stdout_logfile=/var/log/supervisor.nginx.out.log
+; [program:nginx]
+; command=/usr/sbin/nginx
+; autostart=true
+; autorestart=true
+; stderr_logfile=/var/log/supervisor.nginx.err.log
+; stdout_logfile=/var/log/supervisor.nginx.out.log
 
 [program:uwsgi_shop_bot_web]
 command=/usr/local/bin/uwsgi --ini /home/webrunner/telegram_shop_bot/src/telegram_shop_bot/shop_bot.uwsgi.ini  --socket :8002
@@ -12,11 +12,12 @@ autorestart=true
 stderr_logfile=/var/log/supervisor.uwsgi_shop_bot_web.err.log
 stdout_logfile=/var/log/supervisor.uwsgi_shop_bot_web.out.log
 
-[program:shop_bot_long_polling]
-command=/home/webrunner/venvs/env_shop_bot/bin/python ./manage.py run_bot_long_polling
-directory=/home/webrunner/telegram_shop_bot/src/telegram_shop_bot/
-stderr_logfile=/var/log/supervisor.shop_bot_long_polling.err.log
-stdout_logfile=/var/log/supervisor.shop_bot_long_polling.out.log
+; удалить потом
+; [program:shop_bot_long_polling]
+; command=/home/webrunner/venvs/env_shop_bot/bin/python ./manage.py run_bot_long_polling
+; directory=/home/webrunner/telegram_shop_bot/src/telegram_shop_bot/
+; stderr_logfile=/var/log/supervisor.shop_bot_long_polling.err.log
+; stdout_logfile=/var/log/supervisor.shop_bot_long_polling.out.log
 
 
 [program:shop_bot_celery_beat]
