Добавлена группировка программ в supervisord

--- a/supervisor/shop_bot.supervisor.conf
+++ b/supervisor/shop_bot.supervisor.conf
@@ -1,9 +1,3 @@
-; [program:nginx]
-; command=/usr/sbin/nginx
-; autostart=true
-; autorestart=true
-; stderr_logfile=/var/log/supervisor.nginx.err.log
-; stdout_logfile=/var/log/supervisor.nginx.out.log
 
 [program:uwsgi_shop_bot_web]
 command=/usr/local/bin/uwsgi --ini /home/webrunner/telegram_shop_bot/src/telegram_shop_bot/shop_bot.uwsgi.ini  --socket :8002
@@ -11,14 +5,6 @@ autostart=true
 autorestart=true
 stderr_logfile=/var/log/supervisor.uwsgi_shop_bot_web.err.log
 stdout_logfile=/var/log/supervisor.uwsgi_shop_bot_web.out.log
-
-; удалить потом
-; [program:shop_bot_long_polling]
-; command=/home/webrunner/venvs/env_shop_bot/bin/python ./manage.py run_bot_long_polling
-; directory=/home/webrunner/telegram_shop_bot/src/telegram_shop_bot/
-; stderr_logfile=/var/log/supervisor.shop_bot_long_polling.err.log
-; stdout_logfile=/var/log/supervisor.shop_bot_long_polling.out.log
-
 
 [program:shop_bot_celery_beat]
 command=/home/webrunner/venvs/env_shop_bot/bin/python manage.py celery -A telegram_shop_bot beat -l info -S djcelery.schedulers.DatabaseScheduler --settings=telegram_shop_bot.settings.prod
@@ -33,3 +19,6 @@ user=webrunner
 directory=/home/webrunner/telegram_shop_bot/src/telegram_shop_bot/
 stderr_logfile=/var/log/supervisor.shop_bot_celery_worker.err.log
 stdout_logfile=/var/log/supervisor.shop_bot_celery_worker.out.log
+
+[group:shop_bot]
+programs=shop_bot_celery_beat,shop_bot_celery_worker,uwsgi_shop_bot_web
