--- a/shop_bot_nginx.prod.conf
+++ b/shop_bot_nginx.prod.conf
@@ -8,8 +8,9 @@ server {
     # the port your site will be served on
     # listen      82 default_server;
     listen 443 ssl;
-    server_name bots.artbelka.miramik.ru
-    #server_name bots.artbelka.by
+
+server_name bots.artbelka.miramik.ru
+    server_name bots.artbelka.by
 
     ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
     ssl_certificate /etc/letsencrypt/live/bots.artbelka.miramik.ru/fullchain.pem;
