--- a/shop_bot_nginx.prod.conf
+++ b/shop_bot_nginx.prod.conf
@@ -6,15 +6,15 @@ upstream django_shop_bot {
 # configuration of the server
 server {
     # the port your site will be served on
-    # listen      82 default_server;
+    #listen      80 default_server;
     listen 443 ssl;
 
-server_name bots.artbelka.miramik.ru
+    #server_name bots.artbelka.miramik.ru
     server_name bots.artbelka.by
 
     ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
-    ssl_certificate /etc/letsencrypt/live/bots.artbelka.miramik.ru/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/bots.artbelka.miramik.ru/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/bots.artbelka.by/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/bots.artbelka.by/privkey.pem;
 
     # the domain name it will serve for
     # server_name *; # substitute your machine's IP address or FQDN
@@ -25,6 +25,12 @@ server_name bots.artbelka.miramik.ru
 
     access_log /var/log/nginx/web.access.log;
     error_log /var/log/nginx/web.error.log;
+
+    location ~ /.well-known {
+        allow all;
+        root /home/webrunner/telegram_shop_bot/src/telegram_shop_bot;
+    }
+
 
     # Django media
     location /media  {
@@ -40,5 +46,6 @@ server_name bots.artbelka.miramik.ru
         uwsgi_pass  django_shop_bot;
         include     /home/webrunner/telegram_shop_bot/src/telegram_shop_bot/uwsgi_params;
 
-    }
+    }    
+
 }
