--- a/supervisor/shop_bot.supervisor.conf
+++ b/supervisor/shop_bot.supervisor.conf
@@ -1,6 +1,7 @@
 
 [program:uwsgi_shop_bot_web]
 command=/usr/local/bin/uwsgi --ini /home/webrunner/telegram_shop_bot/src/telegram_shop_bot/shop_bot.uwsgi.ini  --socket :8002
+stopsignal=INT
 autostart=true
 autorestart=true
 stderr_logfile=/var/log/supervisor.uwsgi_shop_bot_web.err.log
