--- a/supervisor/shop_bot.supervisor.conf
+++ b/supervisor/shop_bot.supervisor.conf
@@ -21,5 +21,12 @@ directory=/home/webrunner/telegram_shop_bot/src/telegram_shop_bot/
 stderr_logfile=/var/log/supervisor.shop_bot_celery_worker.err.log
 stdout_logfile=/var/log/supervisor.shop_bot_celery_worker.out.log
 
+[program:shop_bot_celery_collector_worker]
+command=/home/webrunner/venvs/env_shop_bot/bin/python manage.py celery  -A telegram_shop_bot worker -l info -Q collector --settings=telegram_shop_bot.settings.prod
+user=webrunner
+directory=/home/webrunner/telegram_shop_bot/src/telegram_shop_bot/
+stderr_logfile=/var/log/supervisor.shop_bot_celery_collector_worker.err.log
+stdout_logfile=/var/log/supervisor.shop_bot_celery_collector_worker.out.log
+
 [group:shop_bot]
 programs=shop_bot_celery_beat,shop_bot_celery_worker,uwsgi_shop_bot_web
