Добавлен collector worker в group

--- a/supervisor/shop_bot.supervisor.conf
+++ b/supervisor/shop_bot.supervisor.conf
@@ -29,4 +29,4 @@ stderr_logfile=/var/log/supervisor.shop_bot_celery_collector_worker.err.log
 stdout_logfile=/var/log/supervisor.shop_bot_celery_collector_worker.out.log
 
 [group:shop_bot]
-programs=shop_bot_celery_beat,shop_bot_celery_worker,uwsgi_shop_bot_web
+programs=shop_bot_celery_beat,shop_bot_celery_worker,uwsgi_shop_bot_web,shop_bot_celery_collector_worker
