--- a/supervisor/shop_bot.supervisor.conf
+++ b/supervisor/shop_bot.supervisor.conf
@@ -15,14 +15,14 @@ stderr_logfile=/var/log/supervisor.shop_bot_celery_beat.err.log
 stdout_logfile=/var/log/supervisor.shop_bot_celery_beat.out.log
 
 [program:shop_bot_celery_worker]
-command=/home/webrunner/venvs/env_shop_bot/bin/python manage.py celery -A telegram_shop_bot worker -l info --events -c 1 --settings=telegram_shop_bot.settings.prod
+command=nice -n 1 /home/webrunner/venvs/env_shop_bot/bin/python manage.py celery -A telegram_shop_bot worker -l info --events -c 1 --settings=telegram_shop_bot.settings.prod
 user=webrunner
 directory=/home/webrunner/telegram_shop_bot/src/telegram_shop_bot/
 stderr_logfile=/var/log/supervisor.shop_bot_celery_worker.err.log
 stdout_logfile=/var/log/supervisor.shop_bot_celery_worker.out.log
 
 [program:shop_bot_celery_collector_worker]
-command=/home/webrunner/venvs/env_shop_bot/bin/python manage.py celery  -A telegram_shop_bot worker -l info -Q collector --settings=telegram_shop_bot.settings.prod
+command=nice -n 1 /home/webrunner/venvs/env_shop_bot/bin/python manage.py celery  -A telegram_shop_bot worker -P prefork -l info -Q collector -c 5  --settings=telegram_shop_bot.settings.prod
 user=webrunner
 directory=/home/webrunner/telegram_shop_bot/src/telegram_shop_bot/
 stderr_logfile=/var/log/supervisor.shop_bot_celery_collector_worker.err.log
