Обновлен supervisor.conf и readme

--- a/supervisor/shop_bot.supervisor.conf
+++ b/supervisor/shop_bot.supervisor.conf
@@ -29,5 +29,12 @@ directory=/home/webrunner/telegram_shop_bot/src/telegram_shop_bot/
 stderr_logfile=/var/log/supervisor.shop_bot_celery_collector_worker.err.log
 stdout_logfile=/var/log/supervisor.shop_bot_celery_collector_worker.out.log
 
+[program:shop_bot_celery_metric_worker]
+command=nice -n 1 /home/webrunner/venvs/env_shop_bot/bin/python manage.py celery  -A telegram_shop_bot worker -P prefork -l info -Q metric -c 5  --settings=telegram_shop_bot.settings.prod
+user=webrunner
+directory=/home/webrunner/telegram_shop_bot/src/telegram_shop_bot/
+stderr_logfile=/var/log/supervisor.shop_bot_celery_metric_worker.err.log
+stdout_logfile=/var/log/supervisor.shop_bot_celery_metric_worker.out.log
+
 [group:shop_bot]
-programs=shop_bot_celery_beat,shop_bot_celery_worker,uwsgi_shop_bot_web,shop_bot_celery_collector_worker
+programs=shop_bot_celery_beat,shop_bot_celery_worker,uwsgi_shop_bot_web,shop_bot_celery_collector_worker,shop_bot_celery_metric_worker
